# Labcontrol

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Doxyfile  Labcontrol.pro  Labcontrol.pro.user.4.8-pre1  Makefile  PROGRAMMING.md  README  README.md  labcontrol  labcontrol.desktop  moc_client.cpp  moc_clienthelpnotificationserver.cpp  moc_clientpinger.cpp  moc_lablib.cpp  moc_localzleafstarter.cpp  moc_mainwindow.cpp  moc_manualprintingsetup.cpp  moc_netstatagent.cpp  moc_predefs.h  moc_receipts_handler.cpp  moc_receiptsprinter.cpp  moc_session.cpp  moc_sessionsmodel.cpp  moc_settings.cpp  moc_ztree.cpp  ui_localzleafstarter.h  ui_mainwindow.h  ui_manualprintingsetup.h
.github/workflows/: main.yml
data/: Labcontrol.conf  Labcontrol.json  example_header.tex
data/scripts/: kill_zLeaf_labcontrol2.sh  start_zLeaf_labcontrol2.sh  start_zTree_labcontrol2.sh
doc/: manual.aux  manual.tex  manual.toc
src/: localzleafstarter.cpp  localzleafstarter.h  localzleafstarter.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  manualprintingsetup.cpp  manualprintingsetup.h  manualprintingsetup.ui  sessiondisplay.cpp  sessiondisplay.h  sessiondisplay.ui  sessionstarter.cpp  sessionstarter.h  sessionstarter.ui
src/Lib/: client.cpp  client.h  clienthelpnotificationserver.cpp  clienthelpnotificationserver.h  clientpinger.cpp  clientpinger.h  global.h  lablib.cpp  lablib.h  netstatagent.cpp  netstatagent.h  receipts_handler.cpp  receipts_handler.h  receiptsprinter.cpp  receiptsprinter.h  session.cpp  session.h  sessionsmodel.cpp  sessionsmodel.h  settings.cpp  (+3 more)
(+5 files in other folders)
